--- a/app/src/main/res/layout/auth/layout/activity_start.xml
+++ b/app/src/main/res/layout/auth/layout/activity_start.xml
@@ -16,17 +16,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/login"
-        android:id="@+id/register"
-        android:text="Register"
+        android:id="@+id/signUp"
+        android:text="註冊"
         android:background="@color/colorPrimary"/>
+
     <Button
+        android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="100dp"
-        android:id="@+id/login"
-        android:text="Login"
-        android:background="@color/colorPrimary"/>
+        android:background="@color/colorPrimary"
+        android:text="登入" />
 
 </RelativeLayout>
