--- a/app/src/main/res/layout/me/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/me/layout/fragment_profile.xml
@@ -234,6 +234,18 @@
                     android:src="@drawable/arrow"
                     android:scaleType="fitEnd" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical">
+                <TextView
+                    android:id="@+id/logOut"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="登出"
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toStartOf="parent" />
+            </LinearLayout>
 
 
         </LinearLayout>
