--- a/app/src/main/res/drawable/v_time.xml
+++ b/app/src/main/res/drawable/v_time.xml
@@ -1,10 +1,10 @@
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="32dp"
-    android:tint="?attr/colorControlNormal"
+    android:height="40dp"
+    android:tint="#1C1C19"
     android:viewportHeight="24"
     android:viewportWidth="24"
-    android:width="32dp"
+    android:width="40dp"
     >
 
     <path android:fillColor="@android:color/white"
