--- a/app/src/main/res/layout/list/layout/activity_food_content_require.xml
+++ b/app/src/main/res/layout/list/layout/activity_food_content_require.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingHorizontal="18dp"
-    >
+    android:paddingHorizontal="18dp">
 
     <LinearLayout
         android:id="@+id/img"
@@ -28,16 +27,26 @@
         android:id="@+id/name_num"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img">
+
         <TextView
             android:id="@+id/pTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            android:hint="芭樂"
+            android:textSize="40sp"
+            android:text="芭樂"
+            android:textColor="@color/second_text"
             android:autoLink="all"/>
+
+        <TextView
+            android:layout_marginTop="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="4天前刊登" />
 
     </LinearLayout>
 
@@ -45,7 +54,7 @@
         android:id="@+id/detail_des"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name_num">
@@ -55,21 +64,20 @@
             android:id="@+id/pDes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="2天前買的芭樂，但拔了智齒咬不動"
-            android:textSize="18sp" />
-
-
+            android:text="2天前買的芭樂，但拔了智齒咬不動"
+            android:textColor="@color/second_text"
+            android:textSize="20sp" />
     </LinearLayout>
 
+
     <View
-        android:id="@+id/context_line"
+        android:id="@+id/context_line2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#777"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_des"
         android:layout_marginTop="12dp"/>
-
 
 
     <LinearLayout
@@ -79,7 +87,7 @@
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/context_line">
+        app:layout_constraintTop_toBottomOf="@+id/context_line2">
 
         <com.blogspot.atifsoftwares.circularimageview.CircularImageView
             android:id="@+id/uImg"
@@ -94,19 +102,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:hint="小陳叔叔"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:text="小陳叔叔 , "
+            android:textColor="@color/second_text"
+
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="8小時後過期"
+            android:textSize="20sp" />
 
     </LinearLayout>
-
 
 
     <LinearLayout
         android:id="@+id/detail_validity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,13 +133,14 @@
             android:background="@color/material_on_background_disabled"
             android:src="@drawable/v_time"
             android:paddingRight="12dp"/>
-            android:src="@drawable/v_time" />
+
         <TextView
             android:id="@+id/pTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="假日都可以"
-            android:textSize="18sp"/>
+            android:textColor="@color/black"
+            android:textSize="20sp"/>
     </LinearLayout>
 
 
@@ -132,7 +148,7 @@
         android:id="@+id/detail_loc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,38 +160,34 @@
             android:background="@color/material_on_background_disabled"
             android:src="@drawable/v_location"
             android:paddingRight="12dp" />
-            android:src="@drawable/v_location" />
+
 
         <TextView
             android:id="@+id/pLoc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="社區門口"
-            android:textSize="18sp" />
+            android:textColor="@color/black"
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+
         android:gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/btn_shape01"
-            android:text="立即下架"
-            android:textSize="18sp"
-            android:padding="12dp"
-            android:layout_marginRight="32dp"/>
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_shape01"
-            android:text="你有 則私訊"
+            android:background="@drawable/btn_shape_orange"
+            android:text="提出索取"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             android:textSize="18sp"
             android:padding="12dp"/>
     </LinearLayout>
