--- a/app/src/main/res/layout/list/layout/activity_food_content.xml
+++ b/app/src/main/res/layout/list/layout/activity_food_content.xml
@@ -3,14 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingHorizontal="18dp"
     >
+
+    <include
+        layout="@layout/toolbar_edit"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="60dp"
+        android:paddingHorizontal="18dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -29,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingHorizontal="18dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img">
@@ -55,6 +62,7 @@
         android:id="@+id/detail_des"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="18dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +83,7 @@
         android:id="@+id/context_line2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginHorizontal="18dp"
         android:background="#777"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_des"
@@ -85,6 +94,7 @@
         android:id="@+id/poster"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="18dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,6 +132,7 @@
         android:id="@+id/detail_validity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="18dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
@@ -149,6 +160,7 @@
         android:id="@+id/detail_loc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="18dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
