個人頁 intro改位置 food_content、add_post新增返回鍵

--- a/app/src/main/res/layout/auth/layout/activity_register.xml
+++ b/app/src/main/res/layout/auth/layout/activity_register.xml
@@ -82,6 +82,24 @@
                 android:textSize="18sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:passwordToggleEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/background_input"
+                android:hint="用戶名"
+                android:paddingHorizontal="16dp"
+                android:textSize="18sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/registerBtn"
             android:layout_width="match_parent"
