--- a/app/src/main/res/layout/add/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/add/layout/activity_add_post.xml
@@ -9,6 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <include layout="@layout/toolbar_back"/>
 
         <LinearLayout
             android:id="@+id/content_img"
@@ -16,6 +17,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingHorizontal="18dp"
+            android:layout_marginTop="?attr/actionBarSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
