--- a/app/src/main/res/layout/group/layout/fragment_about_profile.xml
+++ b/app/src/main/res/layout/group/layout/fragment_about_profile.xml
@@ -7,19 +7,32 @@
     android:orientation="vertical"
     tools:context=".AboutProfile">
 
+        <TextView
+            android:id="@+id/introTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:inputType="textMultiLine"
+            android:text="我的自我介紹啦~嗨嗨大家好~"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@id/guideline2"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="16dp" />
 
         <TextView
             android:id="@+id/privacyTil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:textColor="@color/black"
             android:text="私人相關"
             android:textSize="32sp" />
-
 
         <TextView
             android:id="@+id/privacy1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="索取紀錄"
             android:textSize="24sp"
             app:drawableEndCompat="@drawable/arrow" />
@@ -28,6 +41,7 @@
             android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="編輯個人檔案"
             android:textSize="24sp"
             app:drawableEndCompat="@drawable/arrow" />
@@ -36,6 +50,7 @@
             android:id="@+id/logOut"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="登出"
             android:textSize="24sp"
             app:drawableEndCompat="@drawable/arrow"/>
