--- a/app/src/main/res/layout/list/layout/activity_food_content_require.xml
+++ b/app/src/main/res/layout/list/layout/activity_food_content_require.xml
@@ -3,13 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingHorizontal="18dp">
+    >
+
+    <include
+        layout="@layout/toolbar_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:paddingHorizontal="18dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -28,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingHorizontal="18dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img">
@@ -54,6 +62,7 @@
         android:id="@+id/detail_des"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="18dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,6 +83,7 @@
         android:id="@+id/context_line2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginHorizontal="18dp"
         android:background="#777"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_des"
@@ -84,6 +94,7 @@
         android:id="@+id/poster"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="18dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,6 +132,7 @@
         android:id="@+id/detail_validity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="18dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
@@ -131,7 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/material_on_background_disabled"
-            android:src="@drawable/v_time"
+            android:src="@drawable/ic_time"
             android:paddingRight="12dp"/>
 
         <TextView
@@ -148,6 +160,7 @@
         android:id="@+id/detail_loc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="18dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
@@ -171,26 +184,28 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-
-        android:gravity="center_horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_shape_orange"
-            android:text="提出索取"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:padding="12dp"/>
-    </LinearLayout>
+            android:layout_marginBottom="16dp"
+            android:layout_marginHorizontal="18dp"
+            android:gravity="center_horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_shape_orange"
+                android:text="提出索取"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:padding="12dp"/>
+        </LinearLayout>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
