--- a/app/src/main/res/layout/chat/layout/activity_chat.xml
+++ b/app/src/main/res/layout/chat/layout/activity_chat.xml
@@ -15,6 +15,14 @@
         app:layout_constraintBottom_toTopOf="@+id/layout_send"
         app:layout_constraintTop_toTopOf="parent"/>
 
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:background="@color/colorPrimary"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/layout_send"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        android:layout_marginBottom="16dp"/>-->
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_back"
         android:layout_width="30dp"
@@ -52,6 +60,69 @@
         app:layout_constraintEnd_toStartOf="@+id/image_info"
         app:layout_constraintStart_toEndOf="@+id/image_back"/>
 
+    <View
+        android:id="@+id/view_top"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image_back"
+      />
+
+
+    <LinearLayout
+        android:id="@+id/post_all"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/view_top"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/pImageIv"
+            android:src="@drawable/guava"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="8dp"
+            />
+        <TextView
+            android:id="@+id/pTitleTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:textSize="24sp"
+            android:text="@string/title"
+            android:autoLink="all"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/button_request"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:padding="12dp"
+        app:layout_constraintTop_toBottomOf="@id/post_all"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal" >
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="提出索取"
+            android:textColor="@color/white"
+            android:background="@drawable/btn_shape_orange"
+            />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/view_supporter"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="12dp"
+        android:background="@color/bgColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_request"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -59,10 +130,10 @@
         android:orientation="vertical"
         android:overScrollMode="never"
         android:padding="20dp"
-        android:visibility="gone"
+
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="@+id/view_background"
-        app:layout_constraintTop_toBottomOf="@id/image_back"/>
+        app:layout_constraintTop_toBottomOf="@id/view_supporter"/>
 
     <ProgressBar
         android:layout_width="25dp"
